--- a/src/app/project-list/project-list.component.scss
+++ b/src/app/project-list/project-list.component.scss
@@ -1,5 +1,5 @@
 .main {
-	margin-top: 15vh;
+	margin-top: 30vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
